gitops/generated/ai/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai

spec:
  selector:
    app: ai

  ports:
  - name: http
    port: 8080
    targetPort: 8080

  type: ClusterIP
