gitops/generated/ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai
  namespace: ai

spec:
  ingressClassName: traefik

  rules:
  - host: ai.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: ai
            port:
              number: 8080
